--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
 <html lang="ru">  <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#A813E3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Матрешка RP – мобильная игра про Россию с открытым миром. Тут ты можешь стать кем угодно, начиная от простого работяги и заканчивая владельцем бизнеса, главой банды или президентом. Огромный выбор автомобилей и их тюнинга, онлайн мини-игры, дрифт, ежемесячные ивенты. Все это бесплатно доступно с телефона на МАТРЕШКА РП / КРМП!">
+    <meta name="description" content="Мария RP – мобильная игра про Россию с открытым миром. Тут ты можешь стать кем угодно, начиная от простого работяги и заканчивая владельцем бизнеса, главой банды или президентом. Огромный выбор автомобилей и их тюнинга, онлайн мини-игры, дрифт, ежемесячные ивенты. Все это бесплатно доступно с телефона на МАРИЯ РП / КРМП!">
     <meta name="robots" content="all">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
@@ -14,11 +13,11 @@
     <meta name="msapplication-TileColor" content="#A813E3">
     <meta name="msapplication-TileImage" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/browserconfig.xml">
-    <meta property="og:title" content="МАТРЕШКА РП - Онлайн-игра с открытым миром на андроид">
+    <meta property="og:title" content="Мария РП - Онлайн-игра с открытым миром на андроид">
     <meta property="og:description" content="Стань полицейским, бандитом, барыгой или президентом! Всё в твоих руках!">
     <meta property="og:image" content="https://edge-cdn-matrpru.matrp.ru/images/og/universal.jpg">
     <meta name="yandex-verification" content="0af08c8e1183a17d">
-    <title>МАТРЕШКА РП - Онлайн-игра с открытым миром на андроид</title>
+    <title>Мария РП - Онлайн-игра с открытым миром на андроид</title>
     <link rel="shortcut icon" href="images/favicons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
@@ -81,7 +80,7 @@
             <li class="menu__item">  Форум</li></a><a href="donate.html">
             <li class="menu__item rate" data-rate="x2"> Пополнить счет</li></a><a href="play.html">
             <li class="menu__item">  Как начать играть</li></a><a href="map.html">
-            <li class="menu__item">  Карта</li></a>
+            <li class="menu__item">  </li></a>
           <div class="menu__line"></div>
         </ul>
         <div class="header-phone-menu-button">
@@ -95,7 +94,7 @@
               <li class="menu__item">  Форум</li></a><a href="donate.html">
               <li class="menu__item rate" data-rate="x2"> Пополнить счет</li></a><a href="play.html">
               <li class="menu__item">  Как начать играть</li></a><a href="map.html">
-              <li class="menu__item">  Карта</li></a>
+              <li class="menu__item">  </li></a>
           </ul>
         </div>
         <ul class="header__social"> <a class="pc" target="_blank" href="https://vk.com/russian_mobile">
@@ -144,12 +143,12 @@
     <div class="block one"><img src="images/cars/1-1.png" style="display:none;"><img src="images/cars/2-1.png" style="display:none;">
       <div class="block-content">
         <div class="title-row">
-          <h2 class="title__item _one wow animate__animated animate__fadeInDown" data-wow-delay="0ms">  <span>Матрешка</span> - Симулятор настоящей России в твоём телефоне</h2>
-          <h2 class="title__item _two wow animate__animated animate__fadeInDown" data-wow-delay="100ms">  <span>Матрешка</span> - Симулятор настоящей России в твоём телефоне</h2>
-          <h2 class="title__item _three wow animate__animated animate__fadeInDown" data-wow-delay="200ms">  <span>Матрешка</span> - Симулятор настоящей России в твоём телефоне</h2>
-          <h2 class="title__item _four wow animate__animated animate__fadeInDown" data-wow-delay="300ms">  <span>Матрешка</span> - Симулятор настоящей России в твоём телефоне</h2>
+          <h2 class="title__item _one wow animate__animated animate__fadeInDown" data-wow-delay="0ms">  <span>Мария</span> - Симулятор настоящей России в твоём телефоне</h2>
+          <h2 class="title__item _two wow animate__animated animate__fadeInDown" data-wow-delay="100ms">  <span>Мария</span> - Симулятор настоящей России в твоём телефоне</h2>
+          <h2 class="title__item _three wow animate__animated animate__fadeInDown" data-wow-delay="200ms">  <span>Мария</span> - Симулятор настоящей России в твоём телефоне</h2>
+          <h2 class="title__item _four wow animate__animated animate__fadeInDown" data-wow-delay="300ms">  <span>Мария</span> - Симулятор настоящей России в твоём телефоне</h2>
         </div>
-        <h4 class="subtitle-text wow animate__animated animate__fadeIn" data-wow-delay="400ms">Всегда хотел ощутить атмосферу России на смартфоне? Это возможно на Матрешке, крутые тачки из реальной жизни, реалистичные дома, приятное комьюнити и многое другое ждет тебя у нас. Присоединяйся прямо сейчас!</h4>
+        <h4 class="subtitle-text wow animate__animated animate__fadeIn" data-wow-delay="400ms">Всегда хотел ощутить атмосферу России на смартфоне? Это возможно на Марие, крутые тачки из реальной жизни, реалистичные дома, приятное комьюнити и многое другое ждет тебя у нас. Присоединяйся прямо сейчас!</h4>
         <div class="howtostart-wrapper">
           <div class="howtostart-background"> 
             <div class="background__item moscow"> </div>
@@ -191,158 +190,13 @@
           <div class="servers-content">
             <div class="servers__item _one wow animate__animated animate__fadeIn" data-wow-delay="200ms">
               <p class="item__name">
-                   Матрешка #1</p>
+                Мария #1</p>
               <div class="item__text-group"> 
                 <p class="item__players">  Игроков</p>
                 <p class="item__online">  0/1000</p>
               </div>
             </div>
-            <div class="servers__item _two wow animate__animated animate__fadeIn" data-wow-delay="100ms">
-              <p class="item__name">
-                   Матрешка #2</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _three wow animate__animated animate__fadeIn" data-wow-delay="0ms">
-              <p class="item__name">
-                   Матрешка #3</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _four wow animate__animated animate__fadeIn" data-wow-delay="100ms">
-              <p class="item__name">
-                   Матрешка #4</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _five wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #5</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _six wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #6</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _seven wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #7</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _eight wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #8</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _nine wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #9</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _ten wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #10</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _eleven wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #11</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _twelve wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #12</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _thirteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #13</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _fourteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #14</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _fiveteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #15</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _sixteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #16</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _seventeen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #17</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _eighteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #18</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-            <div class="servers__item _nineteen wow animate__animated animate__fadeIn" data-wow-delay="200ms">
-              <p class="item__name">
-                   Матрешка #19</p>
-              <div class="item__text-group"> 
-                <p class="item__players">  Игроков</p>
-                <p class="item__online">  0/1000</p>
-              </div>
-            </div>
-          </div>
-        </div>
+         <br>    
         <div class="stats-wrapper"> 
           <div class="stats__item" id="record"> 
             <p class="item__amount">
@@ -381,7 +235,7 @@
           <div class="cards__item _two">
             <div class="item__text-group">
               <div class="item__title wow animate__animated animate__fadeIn" data-wow-delay="0ms">  Адекватное комьюнити</div>
-              <div class="item__text wow animate__animated animate__fadeIn" data-wow-delay="150ms">Мобильная игра про Россию МАТРЕШКА с адекватными игроками и отзывчивой администрацией ждет именно тебя! В игре ты сможешь найти себе друзей и пообщаться с помощью голосового чата соблюдая в игре ролевой режим, скрасив свой досуг и скуку.</div>
+              <div class="item__text wow animate__animated animate__fadeIn" data-wow-delay="150ms">Мобильная игра про Россию МАРИЯ с адекватными игроками и отзывчивой администрацией ждет именно тебя! В игре ты сможешь найти себе друзей и пообщаться с помощью голосового чата соблюдая в игре ролевой режим, скрасив свой досуг и скуку.</div>
             </div>
           </div>
           <div class="cards__item _three">
@@ -393,7 +247,7 @@
           <div class="cards__item _four">
             <div class="item__text-group">
               <div class="item__title wow animate__animated animate__fadeIn" data-wow-delay="0ms">  Крутые автомобили и тюнинг</div>
-              <div class="item__text wow animate__animated animate__fadeIn" data-wow-delay="150ms">На МАТРЕШКЕ большой автопарк как русского, так и зарубежного автопрома. Прокачивай как техническую часть, так и визуально - поставив на тачку крутые бампера и винилы. Твоя машина в твоих руках, покажи свою индивидуальность и креативность!</div>
+              <div class="item__text wow animate__animated русского, так и зарубежного автопрома. Прокачивай как техническую часть, так и визуально - поставив на тачку крутые бампера и винилы. Твоя машина в твоих руках, покажи свою индивидуальность и креативность!</danimate__fadeIn" data-wow-delay="150ms">На Марие большой автопарк как iv>
             </div>
           </div>
           <div class="cards__item _five">
@@ -410,7 +264,7 @@
       <div class="footer-wrapper">
         <div class="footer-inner"><a href="index.htm">
             <div class="footer__logo"></div></a>
-          <p class="footer__copyright">© 2020-2023<br>МАТРЕШКА MOBILE</p>
+          <p class="footer__copyright">© 2022-2023<br>МАРИЯ MOBILE</p>
         </div>
         <ul class="footer__menu"><a target="_blank" href="offerta.html">
             <li class="menu__item active">  Договор оферты</li></a><a target="_blank" href="privacy.html">
