--- a/play.html
+++ b/play.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE html>
-<html lang="ru">  <head>
+﻿<html lang="ru">  <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#A813E3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Матрешка RP – мобильная игра про Россию с открытым миром. Тут ты можешь стать кем угодно, начиная от простого работяги и заканчивая владельцем бизнеса, главой банды или президентом. Огромный выбор автомобилей и их тюнинга, онлайн мини-игры, дрифт, ежемесячные ивенты. Все это бесплатно доступно с телефона на МАТРЕШКА РП / КРМП!">
+    <meta name="description" content="Мария RP – мобильная игра про Россию с открытым миром. Тут ты можешь стать кем угодно, начиная от простого работяги и заканчивая владельцем бизнеса, главой банды или президентом. Огромный выбор автомобилей и их тюнинга, онлайн мини-игры, дрифт, ежемесячные ивенты. Все это бесплатно доступно с телефона на МАРИ РП / КРМП!">
     <meta name="robots" content="all">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
@@ -14,11 +13,11 @@
     <meta name="msapplication-TileColor" content="#A813E3">
     <meta name="msapplication-TileImage" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/browserconfig.xml">
-    <meta property="og:title" content="Начать играть - МАТРЕШКА РП - Онлайн-игра с открытым миром на андроид">
+    <meta property="og:title" content="Начать играть - МАРИЯ РП - Онлайн-игра с открытым миром на андроид">
     <meta property="og:description" content="Стань полицейским, бандитом, барыгой или президентом! Всё в твоих руках!">
     <meta property="og:image" content="https://edge-cdn-matrpru.matrp.ru/images/og/start.jpg">
     <meta name="yandex-verification" content="0af08c8e1183a17d">
-    <title>Начать играть - МАТРЕШКА РП - Онлайн-игра с открытым миром на андроид</title>
+    <title>Начать играть - МАРИЯ РП - Онлайн-игра с открытым миром на андроид</title>
     <link rel="shortcut icon" href="images/favicons/favicon.ico">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
@@ -215,7 +214,7 @@
       <div class="footer-wrapper">
         <div class="footer-inner"><a href="index.htm">
             <div class="footer__logo"></div></a>
-          <p class="footer__copyright">© 2020-2023<br>МАТРЕШКА MOBILE</p>
+          <p class="footer__copyright">© 2020-2023<br>МАРИЯ MOBILE</p>
         </div>
         <ul class="footer__menu"><a target="_blank" href="offerta.html">
             <li class="menu__item active">  Договор оферты</li></a><a target="_blank" href="privacy.html">
