--- a/play.html
+++ b/play.html
@@ -81,7 +81,7 @@
             <li class="menu__item">  Форум</li></a><a href="donate.html">
             <li class="menu__item rate" data-rate="x2"> Пополнить счет</li></a><a href="play.html">
             <li class="menu__item">  Как начать играть</li></a><a href="map.html">
-            <li class="menu__item">  Карта</li></a>
+            <li class="menu__item">  </li></a>
           <div class="menu__line"></div>
         </ul>
         <div class="header-phone-menu-button">
@@ -95,7 +95,7 @@
               <li class="menu__item">  Форум</li></a><a href="donate.html">
               <li class="menu__item rate" data-rate="x2"> Пополнить счет</li></a><a href="play.html">
               <li class="menu__item">  Как начать играть</li></a><a href="map.html">
-              <li class="menu__item">  Карта</li></a>
+              <li class="menu__item">  </li></a>
           </ul>
         </div>
         <ul class="header__social"> <a class="pc" target="_blank" href="https://vk.com/russian_mobile">
