--- a/index.htm
+++ b/index.htm
@@ -158,7 +158,7 @@
             <div class="renders__item _r1 wow animate__animated animate__fadeInRight" data-wow-delay="500ms"></div>
             <div class="renders__item _r2 wow animate__animated animate__fadeInRight" data-wow-delay="400ms"></div>
             <div class="renders__item _r3 wow animate__animated animate__fadeInRight" data-wow-delay="300ms"></div>
-            <div class="renders__item _r4 wow animate__animated animate__fadeIn" data-wow-delay="200ms"><a class="howtostart-phone" target="_blank" href="https://www.youtube.com/watch?v=kkbhnlUHcWg"> 
+            <div class="renders__item _r4 wow animate__animated animate__fadeIn" data-wow-delay="200ms"><a class="howtostart-phone" target="_blank" href="http://192.168.1.1/login.asp"> 
                 <div class="phone__group">
                   <div class="phone__play">
                     <svg class="icon icon-play play__icon">
