--- a/index.htm
+++ b/index.htm
@@ -6,16 +6,16 @@
     <meta name="robots" content="all">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Matreshka RolePlay">
+    <meta name="application-name" content="Maria RolePlay">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Matreshka RolePlay">
+    <meta name="apple-mobile-web-app-title" content="Maria RolePlay">
     <meta name="msapplication-TileColor" content="#A813E3">
     <meta name="msapplication-TileImage" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/browserconfig.xml">
     <meta property="og:title" content="Мария РП - Онлайн-игра с открытым миром на андроид">
     <meta property="og:description" content="Стань полицейским, бандитом, барыгой или президентом! Всё в твоих руках!">
-    <meta property="og:image" content="https://edge-cdn-matrpru.matrp.ru/images/og/universal.jpg">
+    <meta property="og:image" content="">
     <meta name="yandex-verification" content="0af08c8e1183a17d">
     <title>Мария РП - Онлайн-игра с открытым миром на андроид</title>
     <link rel="shortcut icon" href="images/favicons/favicon.ico">
