--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <html lang="ru">  <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-">
     <meta name="theme-color" content="#A813E3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Мария RP – мобильная игра про Россию с открытым миром. Тут ты можешь стать кем угодно, начиная от простого работяги и заканчивая владельцем бизнеса, главой банды или президентом. Огромный выбор автомобилей и их тюнинга, онлайн мини-игры, дрифт, ежемесячные ивенты. Все это бесплатно доступно с телефона на МАРИЯ РП / КРМП!">
