--- a/play.html
+++ b/play.html
@@ -1,4 +1,4 @@
-﻿<html lang="ru">  <head>
+<html lang="ru">  <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#A813E3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,10 +6,10 @@
     <meta name="robots" content="all">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Matreshka RolePlay">
+    <meta name="application-name" content="Maria RolePlay">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Matreshka RolePlay">
+    <meta name="apple-mobile-web-app-title" content="Maria RolePlay">
     <meta name="msapplication-TileColor" content="#A813E3">
     <meta name="msapplication-TileImage" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="https://edge-cdn-matrpru.matrp.ru/images/favicons/browserconfig.xml">
@@ -175,7 +175,7 @@
             Скачай и установи лаунчер, дождись 
             загрузки файлов и начни играть!
           </p>
-          <div class="start-row"> <a href="matrp_mobile/client_matrp.apk">
+          <div class="start-row"> <a href="maria_mobile/maria.apk">
               <button class="start__download trackdownload" data-toggle="modal" data-target="#download-success-modal">
                 <p>  Скачать игру</p>
                 <svg class="icon icon-arrow-right download__icon">
