--- a/play.html
+++ b/play.html
@@ -186,7 +186,7 @@
             <div class="mobile-renders-wrapper"> 
               <div class="mobile-renders__item girl"></div>
               <div class="mobile-renders__item phone _one"></div>
-              <div class="mobile-renders__item phone _two"></div><a href="matrp_mobile/client_matrp.apk">
+              <div class="mobile-renders__item phone _two"></div><a href="maria_mobile/maria.apk">
                 <button class="mobile-renders__download trackdownload" data-toggle="modal" data-target="#download-success-modal">
                   <p>  Скачать игру</p>
                 </button></a>
